# 4_dofinder

./: .directory  CMakeLists.txt  README.md
include/: .directory  auxiliary_alg.h  class_alg.h  color_setting.h  function_alg.h
src/: .directory  dofinder.cpp
